# flappy-bird

./: .gitignore  AssetManager.cpp  AssetManager.hpp  CMakeLists.txt  DEFINITIONS.hpp  Game.cpp  Game.hpp  GameOverState.cpp  GameOverState.hpp  GameState.cpp  GameState.hpp  InputManager.cpp  InputManager.hpp  MainMenuState.cpp  MainMenuState.hpp  README.md  SplashState.cpp  SplashState.hpp  State.hpp  StateMachine.cpp  StateMachine.hpp  main.cpp
